# vector-db-api

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE.txt  README.md  api.http  docker-compose.yml  pyproject.toml  requirements.txt
app/: container.py  dependencies.py  errors.py  main.py
app/api/: routers.py
app/api/documents/: __init__.py  add_chunk.py  create_document.py  delete_chunk.py  delete_document.py  get_chunk.py  get_document.py  router.py  update_chunk.py  update_document.py
app/api/libraries/: __init__.py  add_document.py  create_library.py  delete_library.py  find_similar_chunks.py  get_library.py  index_library.py  remove_document.py  update_library.py
app/application/documents/: __init__.py  add_chunk_command.py  create_document_command.py  delete_chunk_command.py  delete_document_command.py  get_chunk_query.py  get_document_query.py  update_chunk_command.py  update_document_command.py
app/application/libraries/: __init__.py  add_document_command.py  create_library_command.py  delete_library_command.py  (+5 more)
app/infrastructure/: __init__.py  in_memory_document_repository.py  in_memory_library_repository.py
src/vector_db_api/: __init__.py  container.py  main.py
test_data/run_1/: chunk_0.json  chunk_1.json  chunk_2.json  chunk_3.json  doc_payload.json
test_data/run_2/: chunk_0.json  chunk_1.json  chunk_2.json  doc_payload.json
tests/: conftest.py
tests/integration/: test_api_endpoints.py  test_find_similar_unindexed.py  test_find_similar_with_filters.py
tools/: douglas-adams-quotes.txt  payload_generator.py
(+229 files in other folders)
