[project]
name = "vector-db-api"
version = "1.0.0"
description = "Vector DB API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "numpy>=2.3.0",
    "pydantic>=2.12.0",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.27.0",
]

[project.optional-dependencies]
test = ["pytest>=8.4.2"]

[tool.pytest.ini_options]
pythonpath = "."
