[project]
name = "vector-db-api"
version = "0.1.0"
description = "Vector DB API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "numpy>=2.3.0",
    "pydantic>=2.12.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = "."
