[project]
name = "vector-db-api"
version = "0.1.0"
description = "Vector DB API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cohere>=5.19.0",
    "fastapi[standard]>=0.119.0",
    "httpx>=0.28.1",
    "numpy>=2.3.0",
    "pydantic-settings>=2.11.0",
    "pytest>=8.4.2",
    "uvicorn>=0.38.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[tool.setuptools]
packages = ["app"]
